Resolved issue with article info spacing

--- a/styles/.sass/_blog.scss
+++ b/styles/.sass/_blog.scss
@@ -52,26 +52,25 @@ article {
         }
         p:last-of-type {
             color: $mediumGrey;
-        } 
-        div {
-            padding: 5px 0;
+        }
+        div:first-child {
+            display: flex;
+            align-items: center; 
+            padding-bottom: 10px;
+            max-width: 50%;
+            min-width: 250px;
+            flex: 1 0 40%; 
+                img { 
+                    height: 80px;
+                    width: 80px;
+                    margin-right: 30px;
+                    border-radius: 50%;
+            }
         }
         div:not(:first-of-type) {
             min-width: 200px;
             flex: 1 1 20%;   
-    }
-}
- 
-.article-author { 
-    display: flex;
-    align-items: center; 
-    min-width: 300px;
-    flex: 1 0 40%; 
-        img { 
-            height: 80px;
-            width: 80px;
-            margin-right: 30px;
-            border-radius: 50%;
+            padding: 5px 0;
     }
 }
 
@@ -110,7 +109,7 @@ article {
     }
 }
 
-.published-comments {
+.comments-section {
     padding: 20px 0;
         li {
             display: flex;
@@ -153,4 +152,4 @@ article {
 	border-right-color: $lightGrey;
 }
 
-.post-comment {padding: 50px 0;}
+.comment-form {padding: 50px 0;}
