--- a/styles/.sass/_footer.scss
+++ b/styles/.sass/_footer.scss
@@ -31,6 +31,8 @@ address {margin-bottom: 20px;}
 .contact-us,
 .recent-posts {margin-bottom: 50px;}
 
+.contact-us {padding-right: 50px;}
+
 .recent-posts {
     h4 {
         text-align: center;
@@ -45,25 +47,28 @@ address {margin-bottom: 20px;}
     display: flex;
     flex-direction: column;
     align-items: flex-end;    
-}
-
-.subscription-form {
-    display: flex;
-    margin-top: 20px;
-        input {
-            padding: 0 15px;
-            display: block;  
-            height: 40px;
-        }
-        button { 
-            color: black;
-            font-size: 2.6rem;
-            background-color: $bgcPrimary;
-            height: 40px;
-            transition: all 0.3s;
-            &:focus,
-            &:hover {
-                background-color: $bgcPrimaryHover;
+    form {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px;
+    }
+    input {
+        padding: 0 15px;
+        display: block;  
+        height: 45px;
+        width: 200px;
+    }
+    button { 
+        color: black;
+        font-size: 2rem;
+        background-color: $bgcPrimary;
+        height: 45px;
+        padding: 0 15px;
+        transition: all 0.3s;
+        &:focus,
+        &:hover {
+            background-color: $bgcPrimaryHover;
         }
     } 
 }
+
