--- a/styles/.sass/_mediaQueries.scss
+++ b/styles/.sass/_mediaQueries.scss
@@ -44,6 +44,8 @@
             border-right: none;
         }
     }
+
+    .full-bleed-image-2 {height: 300px;}
     
     .recent-posts h4 {text-align: left;}
     
